Hw3/hw2_test_file/yacc.output
Grammar

    0 $accept: program $end

    1 program: decl_and_def_list

    2 decl_and_def_list: declaration_list decl_and_def_list_append
    3                  | definition_list decl_and_def_list_append

    4 decl_and_def_list_append: decl_and_def_list
    5                         | %empty

    6 declaration_list: const_decl
    7                 | var_decl
    8                 | funct_decl

    9 funct_decl: type identifier L_PAREN arguments R_PAREN SEMICOLON
   10           | VOID identifier L_PAREN arguments R_PAREN SEMICOLON

   11 arguments: type identifier arguments_append
   12          | type array arguments_append
   13          | %empty

   14 arguments_append: COMMA arguments
   15                 | %empty

   16 definition_list: type identifier L_PAREN arguments R_PAREN compound
   17                | VOID identifier L_PAREN arguments R_PAREN compound

   18 var_decl: type identifier_list SEMICOLON

   19 type: INT
   20     | DOUBLE
   21     | FLOAT
   22     | STRING
   23     | BOOL

   24 identifier_list: identifier var_assign identifier_list_append
   25                | array arr_assign identifier_list_append

   26 identifier_list_append: COMMA identifier_list
   27                       | %empty

   28 var_assign: EQUAL expression
   29           | %empty

   30 identifier: ID

   31 array: ID arr_size_list

   32 arr_size_list: arr_size
   33              | arr_size arr_size_list

   34 arr_size: L_SQUARE INT_CONST R_SQUARE

   35 arr_assign: EQUAL initial_array
   36           | %empty

   37 initial_array: L_CURLY expression_list R_CURLY

   38 expression_list: expression expression_list_append
   39                | %empty

   40 expression_list_append: COMMA expression expression_list_append
   41                       | %empty

   42 const_decl: CONST type const_list SEMICOLON

   43 const_list: identifier EQUAL literal_const const_list_append

   44 const_list_append: COMMA const_list
   45                  | %empty

   46 literal_const: INT_CONST
   47              | FLOAT_CONST
   48              | STRING_CONST
   49              | BOOL_CONST

   50 statement: compound
   51          | simple
   52          | conditional
   53          | while
   54          | for
   55          | jump
   56          | procedure

   57 compound: L_CURLY compound_content R_CURLY

   58 compound_content: var_decl compound_content
   59                 | const_decl compound_content
   60                 | statement compound_content
   61                 | %empty

   62 simple: variable_reference EQUAL expression SEMICOLON
   63       | PRINT expression SEMICOLON
   64       | READ variable_reference SEMICOLON

   65 variable_reference: identifier
   66                   | array_ref

   67 array_ref: identifier array_ref_idx

   68 array_ref_idx: L_SQUARE expression R_SQUARE array_ref_idx_append

   69 array_ref_idx_append: array_ref_idx
   70                     | %empty

   71 expression: literal_const
   72           | variable_reference
   73           | MINUS expression
   74           | expression MULT expression
   75           | expression DIV expression
   76           | expression MOD expression
   77           | expression PLUS expression
   78           | expression MINUS expression
   79           | expression ST expression
   80           | expression SE expression
   81           | expression EQ expression
   82           | expression GE expression
   83           | expression GT expression
   84           | expression NEQ expression
   85           | expression NOT expression
   86           | expression AND expression
   87           | expression OR expression
   88           | L_PAREN expression R_PAREN

   89 conditional: conditional_pair
   90            | conditional_single

   91 conditional_pair: IF L_PAREN expression R_PAREN compound ELSE L_PAREN expression R_PAREN compound

   92 conditional_single: IF L_PAREN expression R_PAREN compound

   93 while: single_while
   94      | do_while

   95 single_while: WHILE L_PAREN expression R_PAREN compound

   96 do_while: DO compound WHILE L_PAREN expression R_PAREN SEMICOLON

   97 for: FOR L_PAREN for_init_expr SEMICOLON for_control_expr SEMICOLON for_incre_expr R_PAREN compound

   98 for_init_expr: expression
   99              | expression EQUAL expression
  100              | %empty

  101 for_control_expr: expression
  102                 | expression EQUAL expression
  103                 | %empty

  104 for_incre_expr: expression
  105               | expression EQUAL expression
  106               | %empty

  107 jump: RETURN expression SEMICOLON
  108     | BREAK SEMICOLON
  109     | CONTINUE SEMICOLON

  110 procedure: identifier L_PAREN expression_list R_PAREN SEMICOLON


Terminals, with rules where they appear

$end (0) 0
error (256)
SEMICOLON (258) 9 10 18 42 62 63 64 96 97 107 108 109 110
COMMA (259) 14 26 40 44
ID (260) 30 31
VOID (261) 10 17
INT (262) 19
DOUBLE (263) 20
FLOAT (264) 21
STRING (265) 22
BOOL (266) 23
EQUAL (267) 28 35 43 62 99 102 105
CONST (268) 42
PRINT (269) 63
READ (270) 64
IF (271) 91 92
ELSE (272) 91
WHILE (273) 95 96
DO (274) 96
FOR (275) 97
RETURN (276) 107
BREAK (277) 108
CONTINUE (278) 109
INT_CONST (279) 34 46
FLOAT_CONST (280) 47
STRING_CONST (281) 48
BOOL_CONST (282) 49
L_CURLY (283) 37 57
R_CURLY (284) 37 57
L_SQUARE (285) 34 68
R_SQUARE (286) 34 68
L_PAREN (287) 9 10 16 17 88 91 92 95 96 97 110
R_PAREN (288) 9 10 16 17 88 91 92 95 96 97 110
MULT (289) 74
DIV (290) 75
MOD (291) 76
PLUS (292) 77
MINUS (293) 73 78
ST (294) 79
SE (295) 80
EQ (296) 81
GE (297) 82
GT (298) 83
NEQ (299) 84
NOT (300) 85
AND (301) 86
OR (302) 87


Nonterminals, with rules where they appear

$accept (48)
    on left: 0
program (49)
    on left: 1, on right: 0
decl_and_def_list (50)
    on left: 2 3, on right: 1 4
decl_and_def_list_append (51)
    on left: 4 5, on right: 2 3
declaration_list (52)
    on left: 6 7 8, on right: 2
funct_decl (53)
    on left: 9 10, on right: 8
arguments (54)
    on left: 11 12 13, on right: 9 10 14 16 17
arguments_append (55)
    on left: 14 15, on right: 11 12
definition_list (56)
    on left: 16 17, on right: 3
var_decl (57)
    on left: 18, on right: 7 58
type (58)
    on left: 19 20 21 22 23, on right: 9 11 12 16 18 42
identifier_list (59)
    on left: 24 25, on right: 18 26
identifier_list_append (60)
    on left: 26 27, on right: 24 25
var_assign (61)
    on left: 28 29, on right: 24
identifier (62)
    on left: 30, on right: 9 10 11 16 17 24 43 65 67 110
array (63)
    on left: 31, on right: 12 25
arr_size_list (64)
    on left: 32 33, on right: 31 33
arr_size (65)
    on left: 34, on right: 32 33
arr_assign (66)
    on left: 35 36, on right: 25
initial_array (67)
    on left: 37, on right: 35
expression_list (68)
    on left: 38 39, on right: 37 110
expression_list_append (69)
    on left: 40 41, on right: 38 40
const_decl (70)
    on left: 42, on right: 6 59
const_list (71)
    on left: 43, on right: 42 44
const_list_append (72)
    on left: 44 45, on right: 43
literal_const (73)
    on left: 46 47 48 49, on right: 43 71
statement (74)
    on left: 50 51 52 53 54 55 56, on right: 60
compound (75)
    on left: 57, on right: 16 17 50 91 92 95 96 97
compound_content (76)
    on left: 58 59 60 61, on right: 57 58 59 60
simple (77)
    on left: 62 63 64, on right: 51
variable_reference (78)
    on left: 65 66, on right: 62 64 72
array_ref (79)
    on left: 67, on right: 66
array_ref_idx (80)
    on left: 68, on right: 67 69
array_ref_idx_append (81)
    on left: 69 70, on right: 68
expression (82)
    on left: 71 72 73 74 75 76 77 78 79 80 81 82 83 84 85 86 87 88,
    on right: 28 38 40 62 63 68 73 74 75 76 77 78 79 80 81 82 83 84
    85 86 87 88 91 92 95 96 98 99 101 102 104 105 107
conditional (83)
    on left: 89 90, on right: 52
conditional_pair (84)
    on left: 91, on right: 89
conditional_single (85)
    on left: 92, on right: 90
while (86)
    on left: 93 94, on right: 53
single_while (87)
    on left: 95, on right: 93
do_while (88)
    on left: 96, on right: 94
for (89)
    on left: 97, on right: 54
for_init_expr (90)
    on left: 98 99 100, on right: 97
for_control_expr (91)
    on left: 101 102 103, on right: 97
for_incre_expr (92)
    on left: 104 105 106, on right: 97
jump (93)
    on left: 107 108 109, on right: 55
procedure (94)
    on left: 110, on right: 56


State 0

    0 $accept: . program $end

    VOID    shift, and go to state 1
    INT     shift, and go to state 2
    DOUBLE  shift, and go to state 3
    FLOAT   shift, and go to state 4
    STRING  shift, and go to state 5
    BOOL    shift, and go to state 6
    CONST   shift, and go to state 7

    program            go to state 8
    decl_and_def_list  go to state 9
    declaration_list   go to state 10
    funct_decl         go to state 11
    definition_list    go to state 12
    var_decl           go to state 13
    type               go to state 14
    const_decl         go to state 15


State 1

   10 funct_decl: VOID . identifier L_PAREN arguments R_PAREN SEMICOLON
   17 definition_list: VOID . identifier L_PAREN arguments R_PAREN compound

    ID  shift, and go to state 16

    identifier  go to state 17


State 2

   19 type: INT .

    $default  reduce using rule 19 (type)


State 3

   20 type: DOUBLE .

    $default  reduce using rule 20 (type)


State 4

   21 type: FLOAT .

    $default  reduce using rule 21 (type)


State 5

   22 type: STRING .

    $default  reduce using rule 22 (type)


State 6

   23 type: BOOL .

    $default  reduce using rule 23 (type)


State 7

   42 const_decl: CONST . type const_list SEMICOLON

    INT     shift, and go to state 2
    DOUBLE  shift, and go to state 3
    FLOAT   shift, and go to state 4
    STRING  shift, and go to state 5
    BOOL    shift, and go to state 6

    type  go to state 18


State 8

    0 $accept: program . $end

    $end  shift, and go to state 19


State 9

    1 program: decl_and_def_list .

    $default  reduce using rule 1 (program)


State 10

    2 decl_and_def_list: declaration_list . decl_and_def_list_append

    VOID    shift, and go to state 1
    INT     shift, and go to state 2
    DOUBLE  shift, and go to state 3
    FLOAT   shift, and go to state 4
    STRING  shift, and go to state 5
    BOOL    shift, and go to state 6
    CONST   shift, and go to state 7

    $default  reduce using rule 5 (decl_and_def_list_append)

    decl_and_def_list         go to state 20
    decl_and_def_list_append  go to state 21
    declaration_list          go to state 10
    funct_decl                go to state 11
    definition_list           go to state 12
    var_decl                  go to state 13
    type                      go to state 14
    const_decl                go to state 15


State 11

    8 declaration_list: funct_decl .

    $default  reduce using rule 8 (declaration_list)


State 12

    3 decl_and_def_list: definition_list . decl_and_def_list_append

    VOID    shift, and go to state 1
    INT     shift, and go to state 2
    DOUBLE  shift, and go to state 3
    FLOAT   shift, and go to state 4
    STRING  shift, and go to state 5
    BOOL    shift, and go to state 6
    CONST   shift, and go to state 7

    $default  reduce using rule 5 (decl_and_def_list_append)

    decl_and_def_list         go to state 20
    decl_and_def_list_append  go to state 22
    declaration_list          go to state 10
    funct_decl                go to state 11
    definition_list           go to state 12
    var_decl                  go to state 13
    type                      go to state 14
    const_decl                go to state 15


State 13

    7 declaration_list: var_decl .

    $default  reduce using rule 7 (declaration_list)


State 14

    9 funct_decl: type . identifier L_PAREN arguments R_PAREN SEMICOLON
   16 definition_list: type . identifier L_PAREN arguments R_PAREN compound
   18 var_decl: type . identifier_list SEMICOLON

    ID  shift, and go to state 23

    identifier_list  go to state 24
    identifier       go to state 25
    array            go to state 26


State 15

    6 declaration_list: const_decl .

    $default  reduce using rule 6 (declaration_list)


State 16

   30 identifier: ID .

    $default  reduce using rule 30 (identifier)


State 17

   10 funct_decl: VOID identifier . L_PAREN arguments R_PAREN SEMICOLON
   17 definition_list: VOID identifier . L_PAREN arguments R_PAREN compound

    L_PAREN  shift, and go to state 27


State 18

   42 const_decl: CONST type . const_list SEMICOLON

    ID  shift, and go to state 16

    identifier  go to state 28
    const_list  go to state 29


State 19

    0 $accept: program $end .

    $default  accept


State 20

    4 decl_and_def_list_append: decl_and_def_list .

    $default  reduce using rule 4 (decl_and_def_list_append)


State 21

    2 decl_and_def_list: declaration_list decl_and_def_list_append .

    $default  reduce using rule 2 (decl_and_def_list)


State 22

    3 decl_and_def_list: definition_list decl_and_def_list_append .

    $default  reduce using rule 3 (decl_and_def_list)


State 23

   30 identifier: ID .
   31 array: ID . arr_size_list

    L_SQUARE  shift, and go to state 30

    $default  reduce using rule 30 (identifier)

    arr_size_list  go to state 31
    arr_size       go to state 32


State 24

   18 var_decl: type identifier_list . SEMICOLON

    SEMICOLON  shift, and go to state 33


State 25

    9 funct_decl: type identifier . L_PAREN arguments R_PAREN SEMICOLON
   16 definition_list: type identifier . L_PAREN arguments R_PAREN compound
   24 identifier_list: identifier . var_assign identifier_list_append

    EQUAL    shift, and go to state 34
    L_PAREN  shift, and go to state 35

    $default  reduce using rule 29 (var_assign)

    var_assign  go to state 36


State 26

   25 identifier_list: array . arr_assign identifier_list_append

    EQUAL  shift, and go to state 37

    $default  reduce using rule 36 (arr_assign)

    arr_assign  go to state 38


State 27

   10 funct_decl: VOID identifier L_PAREN . arguments R_PAREN SEMICOLON
   17 definition_list: VOID identifier L_PAREN . arguments R_PAREN compound

    INT     shift, and go to state 2
    DOUBLE  shift, and go to state 3
    FLOAT   shift, and go to state 4
    STRING  shift, and go to state 5
    BOOL    shift, and go to state 6

    $default  reduce using rule 13 (arguments)

    arguments  go to state 39
    type       go to state 40


State 28

   43 const_list: identifier . EQUAL literal_const const_list_append

    EQUAL  shift, and go to state 41


State 29

   42 const_decl: CONST type const_list . SEMICOLON

    SEMICOLON  shift, and go to state 42


State 30

   34 arr_size: L_SQUARE . INT_CONST R_SQUARE

    INT_CONST  shift, and go to state 43


State 31

   31 array: ID arr_size_list .

    $default  reduce using rule 31 (array)


State 32

   32 arr_size_list: arr_size .
   33              | arr_size . arr_size_list

    L_SQUARE  shift, and go to state 30

    $default  reduce using rule 32 (arr_size_list)

    arr_size_list  go to state 44
    arr_size       go to state 32


State 33

   18 var_decl: type identifier_list SEMICOLON .

    $default  reduce using rule 18 (var_decl)


State 34

   28 var_assign: EQUAL . expression

    ID            shift, and go to state 16
    INT_CONST     shift, and go to state 45
    FLOAT_CONST   shift, and go to state 46
    STRING_CONST  shift, and go to state 47
    BOOL_CONST    shift, and go to state 48
    L_PAREN       shift, and go to state 49
    MINUS         shift, and go to state 50

    identifier          go to state 51
    literal_const       go to state 52
    variable_reference  go to state 53
    array_ref           go to state 54
    expression          go to state 55


State 35

    9 funct_decl: type identifier L_PAREN . arguments R_PAREN SEMICOLON
   16 definition_list: type identifier L_PAREN . arguments R_PAREN compound

    INT     shift, and go to state 2
    DOUBLE  shift, and go to state 3
    FLOAT   shift, and go to state 4
    STRING  shift, and go to state 5
    BOOL    shift, and go to state 6

    $default  reduce using rule 13 (arguments)

    arguments  go to state 56
    type       go to state 40


State 36

   24 identifier_list: identifier var_assign . identifier_list_append

    COMMA  shift, and go to state 57

    $default  reduce using rule 27 (identifier_list_append)

    identifier_list_append  go to state 58


State 37

   35 arr_assign: EQUAL . initial_array

    L_CURLY  shift, and go to state 59

    initial_array  go to state 60


State 38

   25 identifier_list: array arr_assign . identifier_list_append

    COMMA  shift, and go to state 57

    $default  reduce using rule 27 (identifier_list_append)

    identifier_list_append  go to state 61


State 39

   10 funct_decl: VOID identifier L_PAREN arguments . R_PAREN SEMICOLON
   17 definition_list: VOID identifier L_PAREN arguments . R_PAREN compound

    R_PAREN  shift, and go to state 62


State 40

   11 arguments: type . identifier arguments_append
   12          | type . array arguments_append

    ID  shift, and go to state 23

    identifier  go to state 63
    array       go to state 64


State 41

   43 const_list: identifier EQUAL . literal_const const_list_append

    INT_CONST     shift, and go to state 45
    FLOAT_CONST   shift, and go to state 46
    STRING_CONST  shift, and go to state 47
    BOOL_CONST    shift, and go to state 48

    literal_const  go to state 65


State 42

   42 const_decl: CONST type const_list SEMICOLON .

    $default  reduce using rule 42 (const_decl)


State 43

   34 arr_size: L_SQUARE INT_CONST . R_SQUARE

    R_SQUARE  shift, and go to state 66


State 44

   33 arr_size_list: arr_size arr_size_list .

    $default  reduce using rule 33 (arr_size_list)


State 45

   46 literal_const: INT_CONST .

    $default  reduce using rule 46 (literal_const)


State 46

   47 literal_const: FLOAT_CONST .

    $default  reduce using rule 47 (literal_const)


State 47

   48 literal_const: STRING_CONST .

    $default  reduce using rule 48 (literal_const)


State 48

   49 literal_const: BOOL_CONST .

    $default  reduce using rule 49 (literal_const)


State 49

   88 expression: L_PAREN . expression R_PAREN

    ID            shift, and go to state 16
    INT_CONST     shift, and go to state 45
    FLOAT_CONST   shift, and go to state 46
    STRING_CONST  shift, and go to state 47
    BOOL_CONST    shift, and go to state 48
    L_PAREN       shift, and go to state 49
    MINUS         shift, and go to state 50

    identifier          go to state 51
    literal_const       go to state 52
    variable_reference  go to state 53
    array_ref           go to state 54
    expression          go to state 67


State 50

   73 expression: MINUS . expression

    ID            shift, and go to state 16
    INT_CONST     shift, and go to state 45
    FLOAT_CONST   shift, and go to state 46
    STRING_CONST  shift, and go to state 47
    BOOL_CONST    shift, and go to state 48
    L_PAREN       shift, and go to state 49
    MINUS         shift, and go to state 50

    identifier          go to state 51
    literal_const       go to state 52
    variable_reference  go to state 53
    array_ref           go to state 54
    expression          go to state 68


State 51

   65 variable_reference: identifier .
   67 array_ref: identifier . array_ref_idx

    L_SQUARE  shift, and go to state 69

    $default  reduce using rule 65 (variable_reference)

    array_ref_idx  go to state 70


State 52

   71 expression: literal_const .

    $default  reduce using rule 71 (expression)


State 53

   72 expression: variable_reference .

    $default  reduce using rule 72 (expression)


State 54

   66 variable_reference: array_ref .

    $default  reduce using rule 66 (variable_reference)


State 55

   28 var_assign: EQUAL expression .
   74 expression: expression . MULT expression
   75           | expression . DIV expression
   76           | expression . MOD expression
   77           | expression . PLUS expression
   78           | expression . MINUS expression
   79           | expression . ST expression
   80           | expression . SE expression
   81           | expression . EQ expression
   82           | expression . GE expression
   83           | expression . GT expression
   84           | expression . NEQ expression
   85           | expression . NOT expression
   86           | expression . AND expression
   87           | expression . OR expression

    MULT   shift, and go to state 71
    DIV    shift, and go to state 72
    MOD    shift, and go to state 73
    PLUS   shift, and go to state 74
    MINUS  shift, and go to state 75
    ST     shift, and go to state 76
    SE     shift, and go to state 77
    EQ     shift, and go to state 78
    GE     shift, and go to state 79
    GT     shift, and go to state 80
    NEQ    shift, and go to state 81
    NOT    shift, and go to state 82
    AND    shift, and go to state 83
    OR     shift, and go to state 84

    $default  reduce using rule 28 (var_assign)


State 56

    9 funct_decl: type identifier L_PAREN arguments . R_PAREN SEMICOLON
   16 definition_list: type identifier L_PAREN arguments . R_PAREN compound

    R_PAREN  shift, and go to state 85


State 57

   26 identifier_list_append: COMMA . identifier_list

    ID  shift, and go to state 23

    identifier_list  go to state 86
    identifier       go to state 87
    array            go to state 26


State 58

   24 identifier_list: identifier var_assign identifier_list_append .

    $default  reduce using rule 24 (identifier_list)


State 59

   37 initial_array: L_CURLY . expression_list R_CURLY

    ID            shift, and go to state 16
    INT_CONST     shift, and go to state 45
    FLOAT_CONST   shift, and go to state 46
    STRING_CONST  shift, and go to state 47
    BOOL_CONST    shift, and go to state 48
    L_PAREN       shift, and go to state 49
    MINUS         shift, and go to state 50

    $default  reduce using rule 39 (expression_list)

    identifier          go to state 51
    expression_list     go to state 88
    literal_const       go to state 52
    variable_reference  go to state 53
    array_ref           go to state 54
    expression          go to state 89


State 60

   35 arr_assign: EQUAL initial_array .

    $default  reduce using rule 35 (arr_assign)


State 61

   25 identifier_list: array arr_assign identifier_list_append .

    $default  reduce using rule 25 (identifier_list)


State 62

   10 funct_decl: VOID identifier L_PAREN arguments R_PAREN . SEMICOLON
   17 definition_list: VOID identifier L_PAREN arguments R_PAREN . compound

    SEMICOLON  shift, and go to state 90
    L_CURLY    shift, and go to state 91

    compound  go to state 92


State 63

   11 arguments: type identifier . arguments_append

    COMMA  shift, and go to state 93

    $default  reduce using rule 15 (arguments_append)

    arguments_append  go to state 94


State 64

   12 arguments: type array . arguments_append

    COMMA  shift, and go to state 93

    $default  reduce using rule 15 (arguments_append)

    arguments_append  go to state 95


State 65

   43 const_list: identifier EQUAL literal_const . const_list_append

    COMMA  shift, and go to state 96

    $default  reduce using rule 45 (const_list_append)

    const_list_append  go to state 97


State 66

   34 arr_size: L_SQUARE INT_CONST R_SQUARE .

    $default  reduce using rule 34 (arr_size)


State 67

   74 expression: expression . MULT expression
   75           | expression . DIV expression
   76           | expression . MOD expression
   77           | expression . PLUS expression
   78           | expression . MINUS expression
   79           | expression . ST expression
   80           | expression . SE expression
   81           | expression . EQ expression
   82           | expression . GE expression
   83           | expression . GT expression
   84           | expression . NEQ expression
   85           | expression . NOT expression
   86           | expression . AND expression
   87           | expression . OR expression
   88           | L_PAREN expression . R_PAREN

    R_PAREN  shift, and go to state 98
    MULT     shift, and go to state 71
    DIV      shift, and go to state 72
    MOD      shift, and go to state 73
    PLUS     shift, and go to state 74
    MINUS    shift, and go to state 75
    ST       shift, and go to state 76
    SE       shift, and go to state 77
    EQ       shift, and go to state 78
    GE       shift, and go to state 79
    GT       shift, and go to state 80
    NEQ      shift, and go to state 81
    NOT      shift, and go to state 82
    AND      shift, and go to state 83
    OR       shift, and go to state 84


State 68

   73 expression: MINUS expression .
   74           | expression . MULT expression
   75           | expression . DIV expression
   76           | expression . MOD expression
   77           | expression . PLUS expression
   78           | expression . MINUS expression
   79           | expression . ST expression
   80           | expression . SE expression
   81           | expression . EQ expression
   82           | expression . GE expression
   83           | expression . GT expression
   84           | expression . NEQ expression
   85           | expression . NOT expression
   86           | expression . AND expression
   87           | expression . OR expression

    ST   shift, and go to state 76
    SE   shift, and go to state 77
    EQ   shift, and go to state 78
    GE   shift, and go to state 79
    GT   shift, and go to state 80
    NEQ  shift, and go to state 81
    NOT  shift, and go to state 82
    AND  shift, and go to state 83
    OR   shift, and go to state 84

    $default  reduce using rule 73 (expression)


State 69

   68 array_ref_idx: L_SQUARE . expression R_SQUARE array_ref_idx_append

    ID            shift, and go to state 16
    INT_CONST     shift, and go to state 45
    FLOAT_CONST   shift, and go to state 46
    STRING_CONST  shift, and go to state 47
    BOOL_CONST    shift, and go to state 48
    L_PAREN       shift, and go to state 49
    MINUS         shift, and go to state 50

    identifier          go to state 51
    literal_const       go to state 52
    variable_reference  go to state 53
    array_ref           go to state 54
    expression          go to state 99


State 70

   67 array_ref: identifier array_ref_idx .

    $default  reduce using rule 67 (array_ref)


State 71

   74 expression: expression MULT . expression

    ID            shift, and go to state 16
    INT_CONST     shift, and go to state 45
    FLOAT_CONST   shift, and go to state 46
    STRING_CONST  shift, and go to state 47
    BOOL_CONST    shift, and go to state 48
    L_PAREN       shift, and go to state 49
    MINUS         shift, and go to state 50

    identifier          go to state 51
    literal_const       go to state 52
    variable_reference  go to state 53
    array_ref           go to state 54
    expression          go to state 100


State 72

   75 expression: expression DIV . expression

    ID            shift, and go to state 16
    INT_CONST     shift, and go to state 45
    FLOAT_CONST   shift, and go to state 46
    STRING_CONST  shift, and go to state 47
    BOOL_CONST    shift, and go to state 48
    L_PAREN       shift, and go to state 49
    MINUS         shift, and go to state 50

    identifier          go to state 51
    literal_const       go to state 52
    variable_reference  go to state 53
    array_ref           go to state 54
    expression          go to state 101


State 73

   76 expression: expression MOD . expression

    ID            shift, and go to state 16
    INT_CONST     shift, and go to state 45
    FLOAT_CONST   shift, and go to state 46
    STRING_CONST  shift, and go to state 47
    BOOL_CONST    shift, and go to state 48
    L_PAREN       shift, and go to state 49
    MINUS         shift, and go to state 50

    identifier          go to state 51
    literal_const       go to state 52
    variable_reference  go to state 53
    array_ref           go to state 54
    expression          go to state 102


State 74

   77 expression: expression PLUS . expression

    ID            shift, and go to state 16
    INT_CONST     shift, and go to state 45
    FLOAT_CONST   shift, and go to state 46
    STRING_CONST  shift, and go to state 47
    BOOL_CONST    shift, and go to state 48
    L_PAREN       shift, and go to state 49
    MINUS         shift, and go to state 50

    identifier          go to state 51
    literal_const       go to state 52
    variable_reference  go to state 53
    array_ref           go to state 54
    expression          go to state 103


State 75

   78 expression: expression MINUS . expression

    ID            shift, and go to state 16
    INT_CONST     shift, and go to state 45
    FLOAT_CONST   shift, and go to state 46
    STRING_CONST  shift, and go to state 47
    BOOL_CONST    shift, and go to state 48
    L_PAREN       shift, and go to state 49
    MINUS         shift, and go to state 50

    identifier          go to state 51
    literal_const       go to state 52
    variable_reference  go to state 53
    array_ref           go to state 54
    expression          go to state 104


State 76

   79 expression: expression ST . expression

    ID            shift, and go to state 16
    INT_CONST     shift, and go to state 45
    FLOAT_CONST   shift, and go to state 46
    STRING_CONST  shift, and go to state 47
    BOOL_CONST    shift, and go to state 48
    L_PAREN       shift, and go to state 49
    MINUS         shift, and go to state 50

    identifier          go to state 51
    literal_const       go to state 52
    variable_reference  go to state 53
    array_ref           go to state 54
    expression          go to state 105


State 77

   80 expression: expression SE . expression

    ID            shift, and go to state 16
    INT_CONST     shift, and go to state 45
    FLOAT_CONST   shift, and go to state 46
    STRING_CONST  shift, and go to state 47
    BOOL_CONST    shift, and go to state 48
    L_PAREN       shift, and go to state 49
    MINUS         shift, and go to state 50

    identifier          go to state 51
    literal_const       go to state 52
    variable_reference  go to state 53
    array_ref           go to state 54
    expression          go to state 106


State 78

   81 expression: expression EQ . expression

    ID            shift, and go to state 16
    INT_CONST     shift, and go to state 45
    FLOAT_CONST   shift, and go to state 46
    STRING_CONST  shift, and go to state 47
    BOOL_CONST    shift, and go to state 48
    L_PAREN       shift, and go to state 49
    MINUS         shift, and go to state 50

    identifier          go to state 51
    literal_const       go to state 52
    variable_reference  go to state 53
    array_ref           go to state 54
    expression          go to state 107


State 79

   82 expression: expression GE . expression

    ID            shift, and go to state 16
    INT_CONST     shift, and go to state 45
    FLOAT_CONST   shift, and go to state 46
    STRING_CONST  shift, and go to state 47
    BOOL_CONST    shift, and go to state 48
    L_PAREN       shift, and go to state 49
    MINUS         shift, and go to state 50

    identifier          go to state 51
    literal_const       go to state 52
    variable_reference  go to state 53
    array_ref           go to state 54
    expression          go to state 108


State 80

   83 expression: expression GT . expression

    ID            shift, and go to state 16
    INT_CONST     shift, and go to state 45
    FLOAT_CONST   shift, and go to state 46
    STRING_CONST  shift, and go to state 47
    BOOL_CONST    shift, and go to state 48
    L_PAREN       shift, and go to state 49
    MINUS         shift, and go to state 50

    identifier          go to state 51
    literal_const       go to state 52
    variable_reference  go to state 53
    array_ref           go to state 54
    expression          go to state 109


State 81

   84 expression: expression NEQ . expression

    ID            shift, and go to state 16
    INT_CONST     shift, and go to state 45
    FLOAT_CONST   shift, and go to state 46
    STRING_CONST  shift, and go to state 47
    BOOL_CONST    shift, and go to state 48
    L_PAREN       shift, and go to state 49
    MINUS         shift, and go to state 50

    identifier          go to state 51
    literal_const       go to state 52
    variable_reference  go to state 53
    array_ref           go to state 54
    expression          go to state 110


State 82

   85 expression: expression NOT . expression

    ID            shift, and go to state 16
    INT_CONST     shift, and go to state 45
    FLOAT_CONST   shift, and go to state 46
    STRING_CONST  shift, and go to state 47
    BOOL_CONST    shift, and go to state 48
    L_PAREN       shift, and go to state 49
    MINUS         shift, and go to state 50

    identifier          go to state 51
    literal_const       go to state 52
    variable_reference  go to state 53
    array_ref           go to state 54
    expression          go to state 111


State 83

   86 expression: expression AND . expression

    ID            shift, and go to state 16
    INT_CONST     shift, and go to state 45
    FLOAT_CONST   shift, and go to state 46
    STRING_CONST  shift, and go to state 47
    BOOL_CONST    shift, and go to state 48
    L_PAREN       shift, and go to state 49
    MINUS         shift, and go to state 50

    identifier          go to state 51
    literal_const       go to state 52
    variable_reference  go to state 53
    array_ref           go to state 54
    expression          go to state 112


State 84

   87 expression: expression OR . expression

    ID            shift, and go to state 16
    INT_CONST     shift, and go to state 45
    FLOAT_CONST   shift, and go to state 46
    STRING_CONST  shift, and go to state 47
    BOOL_CONST    shift, and go to state 48
    L_PAREN       shift, and go to state 49
    MINUS         shift, and go to state 50

    identifier          go to state 51
    literal_const       go to state 52
    variable_reference  go to state 53
    array_ref           go to state 54
    expression          go to state 113


State 85

    9 funct_decl: type identifier L_PAREN arguments R_PAREN . SEMICOLON
   16 definition_list: type identifier L_PAREN arguments R_PAREN . compound

    SEMICOLON  shift, and go to state 114
    L_CURLY    shift, and go to state 91

    compound  go to state 115


State 86

   26 identifier_list_append: COMMA identifier_list .

    $default  reduce using rule 26 (identifier_list_append)


State 87

   24 identifier_list: identifier . var_assign identifier_list_append

    EQUAL  shift, and go to state 34

    $default  reduce using rule 29 (var_assign)

    var_assign  go to state 36


State 88

   37 initial_array: L_CURLY expression_list . R_CURLY

    R_CURLY  shift, and go to state 116


State 89

   38 expression_list: expression . expression_list_append
   74 expression: expression . MULT expression
   75           | expression . DIV expression
   76           | expression . MOD expression
   77           | expression . PLUS expression
   78           | expression . MINUS expression
   79           | expression . ST expression
   80           | expression . SE expression
   81           | expression . EQ expression
   82           | expression . GE expression
   83           | expression . GT expression
   84           | expression . NEQ expression
   85           | expression . NOT expression
   86           | expression . AND expression
   87           | expression . OR expression

    COMMA  shift, and go to state 117
    MULT   shift, and go to state 71
    DIV    shift, and go to state 72
    MOD    shift, and go to state 73
    PLUS   shift, and go to state 74
    MINUS  shift, and go to state 75
    ST     shift, and go to state 76
    SE     shift, and go to state 77
    EQ     shift, and go to state 78
    GE     shift, and go to state 79
    GT     shift, and go to state 80
    NEQ    shift, and go to state 81
    NOT    shift, and go to state 82
    AND    shift, and go to state 83
    OR     shift, and go to state 84

    $default  reduce using rule 41 (expression_list_append)

    expression_list_append  go to state 118


State 90

   10 funct_decl: VOID identifier L_PAREN arguments R_PAREN SEMICOLON .

    $default  reduce using rule 10 (funct_decl)


State 91

   57 compound: L_CURLY . compound_content R_CURLY

    ID        shift, and go to state 16
    INT       shift, and go to state 2
    DOUBLE    shift, and go to state 3
    FLOAT     shift, and go to state 4
    STRING    shift, and go to state 5
    BOOL      shift, and go to state 6
    CONST     shift, and go to state 7
    PRINT     shift, and go to state 119
    READ      shift, and go to state 120
    IF        shift, and go to state 121
    WHILE     shift, and go to state 122
    DO        shift, and go to state 123
    FOR       shift, and go to state 124
    RETURN    shift, and go to state 125
    BREAK     shift, and go to state 126
    CONTINUE  shift, and go to state 127
    L_CURLY   shift, and go to state 91

    $default  reduce using rule 61 (compound_content)
